Add anothr paragraph again

--- a/play.html
+++ b/play.html
@@ -9,5 +9,8 @@
 <p>Git is a slang term for an unpleasant person. What does that say about the creators of git? Perhaps they stare into the computer and don't like what is reflected back? Maybe they hate someone and want to imagine they are controlling that person with all the git commands? git push! git fetch! Oh boy!</p>
 
 <p>But there is no need to dwell on those thoughts. Git is a tool. Ha! It's getting worse. Another word with negative uses. Let's move on to the useful qualities of this tool called git. I'm going to add a commit to this repository.</p>
+
+<h2>What else can we do besides....</h2>
+<p>....commit, push, pull, make a new branch, merge, add? There's stash and some other commands I should explore...</p>
 </body>
 </html>
