Add another paragraph again

--- a/play.html
+++ b/play.html
@@ -12,5 +12,9 @@
 
 <h2>What else can we do besides....</h2>
 <p>....commit, push, pull, make a new branch, merge, add? There's stash and some other commands I should explore...</p>
+
+<h2>Stash</h2>
+
+<p>I'm going to stash some changes. I like the word stash. It sounds more positive and hopeful, like having some delicious food stashed away. It's almost lunchtime and I have some food stashed in my bag ready to heat up and eat.</p>
 </body>
 </html>
